RESOLVED FIXED116321
[EFL][WK2] Fix sub menu initialization in ewk_context_menu_item
https://bugs.webkit.org/show_bug.cgi?id=116321
Summary [EFL][WK2] Fix sub menu initialization in ewk_context_menu_item
Michal Pakula vel Rutka
Reported 2013-05-17 08:49:28 PDT
SSIA
Attachments
patch (1.77 KB, patch)
2013-05-17 09:04 PDT, Michal Pakula vel Rutka
no flags
patch (1.60 KB, patch)
2013-05-17 09:41 PDT, Michal Pakula vel Rutka
no flags
Michal Pakula vel Rutka
Comment 1 2013-05-17 09:04:19 PDT
Michal Pakula vel Rutka
Comment 2 2013-05-17 09:41:04 PDT
Laszlo Gombos
Comment 3 2013-05-17 09:50:35 PDT
For the record, this is regression after r150254.
Chris Dumez
Comment 4 2013-05-17 09:51:10 PDT
Comment on attachment 202100 [details] patch Oops. Sorry I missed it. Looks good. r=me.
Chris Dumez
Comment 5 2013-05-17 09:53:29 PDT
Comment on attachment 202100 [details] patch Clearing flags on attachment: 202100 Committed r150267: <http://trac.webkit.org/changeset/150267>
Chris Dumez
Comment 6 2013-05-17 09:53:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.