[EFL][WK2] Fix sub menu initialization in ewk_context_menu_item https://bugs.webkit.org/show_bug.cgi?id=116321

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-05-17
Reviewed by Christophe Dumez.

During sub menu creation, after initializing m_parentMenu, parentMenu
pointer became null which may cause segfaults. This patch fixes it by
using m_parentMenu.

* UIProcess/API/efl/ewk_context_menu_item.cpp:
(EwkContextMenuItem::EwkContextMenuItem):

Canonical link: https://commits.webkit.org/134689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150267 268f45cc-cd09-0410-ab3c-d52691b4dbfc